--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
                 <li><button class="btn">Hire me</button></li>
             </ul>
         </nav>
+
+        <section id="banner">
+            <div class="banner-content">
+                <h2>Hi, I am</h2>
+                <h1>Sheikh Sabbir Ahmad</h1>
+                <p>I am a software engineer with a passion for building efficient and user-friendly software solutions.
+                  I enjoy solving problems through code and continuously learning new technologies.</p>
+
+                    <div>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact</button>
+            </div>
+
+            
+            </div>
+
+            <div class="banner-image">
+                <img src="./images/joar.png" alt="">
+            </div>
+        </section>
     </header>
 </body>
 </html>
