--- a/index.html
+++ b/index.html
@@ -43,5 +43,39 @@
             </div>
         </section>
     </header>
+
+    <main>
+        <section id="about">
+            <div class="about-container">
+                <div class="section-heading">
+                    <h2>About me</h2>
+                    <p>I am a professional software engineer with experience in designing and developing scalable software solutions.
+                       I focus on writing clean, efficient, and maintainable code following industry best practices.
+                       I am committed to continuous learning and delivering high-quality, reliable applications.
+                                                                                              </p>
+
+                </div>
+
+                <div class="about-info">
+                    <div class="info-card">
+                        <p>Name:</p>
+                        <h4>Sheikh Sabbir Ahmad</h4>
+                    </div>
+                    <div class="info-card">
+                        <p>Email:</p>
+                        <h4>ahmadsabbir2712@gmail.com</h4>
+                    </div>
+                    <div class="info-card">
+                        <p>Date of birth:</p>
+                        <h4>27 December 2003</h4>
+                    </div>
+                    <div class="info-card">
+                        <p>From:</p>
+                        <h4>Dhaka,Bangladesh</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
