--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="info-card">
                         <p>Date of birth:</p>
-                        <h4>27 December 2003</h4>
+                        <h4>27 December 2000</h4>
                     </div>
                     <div class="info-card">
                         <p>From:</p>
@@ -76,6 +76,44 @@
                 </div>
             </div>
         </section>
+
+    <section id="skills">
+        <div class="skill-container">
+            <div class="section-heading">
+                <h2>What i do</h2>
+                <p>I am a professional software engineer with experience in designing and developing scalable software solutions.
+                   I focus on writing clean, efficient, and maintainable code following industry best practices.
+                   I am committed to continuous learning and delivering high-quality, reliable applications.</p> 
+            </div>
+
+            <div class="skill-box">
+                <div class="skill-card">
+                    <img src="./images/icons/js.png" alt="">
+                    <h3>Vanilla JavaScript</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="skill-card">
+                    <img src="./images/icons/react.png" alt="">
+                    <h3>React</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="skill-card">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <h3>Node.JS</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="skill-card">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <h3>MongoDB</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
 </body>
 </html>
