--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheikh Sabbir Ahmad Portfolio</title>
     <link rel="stylesheet" href="./styles/portfolio.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="font-type">
     <header>
@@ -31,8 +34,8 @@
                   I enjoy solving problems through code and continuously learning new technologies.</p>
 
                     <div>
-                <button class="btn">Download CV</button>
-                <button class="btn">Contact</button>
+                <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
 
             
@@ -172,7 +175,7 @@
         </div>
 
         <div class="text-center">
-            <button class="btn">Download CV</button>
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
     </section>
     </main>
